# projectdb

./: .gitignore  CMakeLists.txt  QtProject.pro  backup.db  conanfile.txt  dialog.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.db  ui_dialog.h
.github/workflows/: build.yml
Nickx/: sqlbase.txt
include/: ui_mainwindow.h
project/: project.sln
project/project/: AssemblyInfo.cpp  MyForm.cpp  MyForm.h  MyForm.resx  pch.h  project.cpp  project.vcxproj  project.vcxproj.filters
project/project/Debug/project.tlog/: project.lastbuildstate
project/project/x64/Debug/: project.exe.recipe  project.vcxproj.FileListAbsolute.txt  project.vcxproj.GenerateResource.cache
project/project/x64/Debug/project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ResGen.command.1.tlog  ResGen.read.1.tlog  ResGen.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  project.lastbuildstate  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
project/x64/Debug/: project.exe.metagen
src/: dialog.cpp  exportexcel.cpp  mainwindow.cpp
test/: Makefile  Makefile.Debug  Makefile.Release  No_test.db  QtProject.pro  QtProject.pro.user.0f244bc  QtProject.pro.user.4153436  QtProject.pro.user.42e18a9  QtProject.pro.user.d68102d  comboboxdelegate.cpp  comboboxdelegate.h  dialog.cpp  dialog.h  dialog.ui  exportexcel.cpp  exportexcel.cpp.autosave  exportexcel.h  exportexcel.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  plan.txt  test.db  ui_dialog.h  ui_exportexcel.h  ui_mainwindow.h
test/release/: moc_comboboxdelegate.cpp  moc_dialog.cpp  moc_exportexcel.cpp  moc_mainwindow.cpp  moc_predefs.h
ui/: exportexcel.ui
