cmake_minimum_required(VERSION 3.15)
project(projectdb CXX)
find_package(OpenXLSX REQUIRED)
find_package(Qt6 REQUIRED COMPONENTS Widgets Sql)
include_directories(include)
qt_standard_project_setup()
qt_add_executable(${PROJECT_NAME} main.cpp dialog.ui dialog.cpp exportexcel.ui exportexcel.cpp)
target_link_libraries(${PROJECT_NAME} OpenXLSX::OpenXLSX)
target_link_libraries(${PROJECT_NAME} Qt6::Widgets)
target_link_libraries(${PROJECT_NAME} Qt6::Sql)
